Changed ShoppingCart, fixed alignment & Add Product Section

--- a/amazon-clone/src/Components/Header/Header.css
+++ b/amazon-clone/src/Components/Header/Header.css
@@ -61,6 +61,7 @@
     display: flex;
     align-items: center;
     color: white;
+    margin-right: 10px;
 }
 
 .header_optionBasketCount{
